Misaligned card fixad med grid row repeat auto
grid-template-rows: repeat(auto, 1fr);
löste problemet mellan card 2 och card 3-4

--- a/style.css
+++ b/style.css
@@ -468,7 +468,7 @@ input[type=submit]:hover {
     width: 100vw;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(auto, 1fr);
     gap: 2rem;
     margin-top: 25px;
     padding-bottom: 100px;
@@ -509,6 +509,7 @@ input[type=submit]:hover {
 
 .card-two {
     grid-column: 2/5;
+    grid-row: 2/3;
 }
 
 .card-four {
